# x-wallet-bk

./: 10. SOLANA Validator (1).docx  6. AVAX Validator Setup Guide (Mainnet).docx  Guide-for-SVN.xlsx  Makefile5G  Note-SOL.txt  SRS - X-Wallet - Admin Web - Phase 1.docx  X-Wallet.postman_collection.json  dailyReport  dump-x_wallet-202110211612.sql  interivew_onsite_new.docx  note  note_solana  report  sol-validator-devnet.pem
BE/: Requirement_Confirm_ModuleStore.xlsx
BE/chat-real-time/: chat-service.js  index.html  index.js  package-lock.json  package.json
BE/manager-user/: package-lock.json  package.json
Virginia-Region/: Jenkins_Server.pem  SolanaValidator.pem  X-Wallet-API.pem  X-Wallet-Worker-Backup.pem  avalanche.pem  avalancheXchain.pem  avalanche_mainnet.pem  id_ed25519_wallet  node_avalanche.pem
dung.hoang/: Artiza_Timesheet_Apr2021_Dung.xlsx  CPRI中間装置_キックオフ資料_DungHoang.xlsx  DailyReport.txt  GetAllNameFile.xlsm  HeThongTaiLieu.txt  Lookup_mongoDB.txt  Pass.txt  PhimTatHayVisualCode.txt  Report_Issue_Note  tranning.txt  履歴書_HOANGHUUDUNG_JP.xlsx  履歴書_LE VAN LUAN_JP.xlsx
rust/: content-bosung.md  content.md  plan-review.md
rust/backend-rust/: Cargo.toml
rust/collection/: Cargo.toml
rust/genric-type/: Cargo.toml  handlingError  lifeTime
rust/libfiles/: Cargo.toml
rust/nameproject/: Cargo.toml  main  match  option-match  struct
rust/rusty-rocket/: Cargo.toml
rust/server/: err.html  index.html
rust/traiobj/: Cargo.toml
rust/waf-modsecurity/: Cargo.toml
rust/web-app-rocket/: Cargo.toml  Rocket.toml  docker-compose.yml
(+4884 files in other folders)
