[package]
name = "rusty-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
base64 = "0.13"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "rustls-tls"]}
chrono = {version="0.4", features = ["serde"] }